change user to student

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
-addUser.form.add=Add user
-addUser.form.birthday=Birthday
-addUser.form.email=Email
-addUser.form.lastName= Last Name
-addUser.form.name = Name
-addUser.form.phone=Phone
+addStudent.form.add=Add student
+addStudent.form.birthday=Birthday
+addStudent.form.email=Email
+addStudent.form.lastName= Last Name
+addStudent.form.name = Name
+addStudent.form.phone=Phone
