added sort method, but can't add sorted students to jsp need help with adding students to the table in jsp

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,7 @@ addStudent.form.email=Email
 addStudent.form.lastName= Last Name
 addStudent.form.name = Name
 addStudent.form.phone=Phone
+Sort=Sort
+sort.selectSortType=Select type of sorting
+sort.sortByAge=Sort by age
+sort.sortByPhoneNumber=Sort by number
