add work method sort

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,5 +6,7 @@ addStudent.form.name = Name
 addStudent.form.phone=Phone
 Sort=Sort
 sort.selectSortType=Select type of sorting
-sort.sortByAge=Sort by age
+sort.sortByAgeAfter=Sort by age after sixteen
+sort.sortByAgeBefore=Sort by age before sixteen
 sort.sortByPhoneNumber=Sort by number
+sort.sortByAll=Select all contacts
