remove method getStudentByOnlyUnknownStudent frim oll class refact method sort rafact tableStyle

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,4 +10,5 @@ sort.sortByAgeAfter=Sort by age after sixteen
 sort.sortByAgeBefore=Sort by age before sixteen
 sort.sortByPhoneNumber=Sort by number
 sort.sortByAll=Select all contacts
+sort.getStudentByOnlyUnknownStudent=Sort by unknown Student
 firstWorkPage.findStudent.surname=Enter student surname
