improved find student

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,4 +11,7 @@ sort.sortByAgeBefore=Sort by age before sixteen
 sort.sortByPhoneNumber=Sort by number
 sort.sortByAll=Select all contacts
 sort.getStudentByOnlyUnknownStudent=Sort by unknown Student
-firstWorkPage.findStudent.surname=Enter student surname
+firstWorkPage.findStudent.surname=Name
+firstWorkPage.findStudent.name=Surname
+firstWorkPage.findStudent.email=Email
+firstWorkPage.findStudent.phone=Phone
