--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,7 +11,4 @@ sort.sortByAgeBefore=Sort by age before sixteen
 sort.sortByPhoneNumber=Sort by number
 sort.sortByAll=Select all contacts
 sort.getStudentByOnlyUnknownStudent=Sort by unknown Student
-firstWorkPage.findStudent.name=Name
-firstWorkPage.findStudent.surname=Surname
-firstWorkPage.findStudent.email=Email
-firstWorkPage.findStudent.phone=Phone
+firstWorkPage.findStudent.surname=Enter student surname
