--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,3 +15,10 @@ firstWorkPage.findStudent.name=Name
 firstWorkPage.findStudent.surname=Surname
 firstWorkPage.findStudent.email=Email
 firstWorkPage.findStudent.phone=Phone
+
+
+Size.student.name=First Name must be between {2} and {1} characters long
+Size.student.surname=Last Name must be between {2} and {1} characters long
+Email.student.email=Please provide a valid Email address
+Past.student.birthday = Date of birth must be in the past and in the next format: dd.mm.yyyy
+pattern.invalid.phone = It seems that you added invalid phone number
