modified send email, added modal window

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,4 +21,5 @@ Size.student.name=First Name must be between {2} and {1} characters long
 Size.student.surname=Last Name must be between {2} and {1} characters long
 Email.student.email=Please provide a valid Email address
 Past.student.birthday = Date of birth must be in the past and in the next format: dd.mm.yyyy
-pattern.invalid.phone = It seems that you added invalid phone number
+Pattern.student.phone = It seems that you added invalid phone number. It must be 10 characters and only numbers
+Pattern.student.strBirthday = Date of birth must be in the past and in the next format: dd.mm.yyyy
